--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
     <div class="hero"></div>
     <div class="content">
         <div  id="search-engine-optimization" class="search-engines">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt ="table with a laptop and magnifying glass,coffee cup,scattered pens/pencils and a note pad" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="search-engines">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt ="Person holding cell phone while on laptop looking at a graph" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="search-engines">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt = "several people sitting around a table using their social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -57,7 +57,7 @@
     <div class="benefits">
         <div class="benefitt">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt ="engine tool with arrow pointing down to a money sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -65,7 +65,7 @@
         </div>
         <div class="benefitt">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt ="light bulb on dressed in a suit and tie like business person" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -73,7 +73,7 @@
         </div>
         <div class="benefitt">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png"></img> alt ="gear with three circles around it with a money sign"
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
