--- a/Develop/index.html
+++ b/Develop/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="benefitt">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img> alt ="gear with three circles around it with a money sign"
+            <img src="./assets/images/cost-management.png" img alt ="gear with three circles around it with a money sign"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
@@ -82,7 +82,7 @@
     </div>
 
     <Footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h2>Made with ❤ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
